[gd_scene load_steps=2 format=3 uid="uid://cbjq3nsk4i6ox"]

[ext_resource type="Script" path="res://scripts/hud.gd" id="1_b2j7g"]

[node name="Hud" type="CanvasLayer"]
script = ExtResource("1_b2j7g")

[node name="CountdownMessage" type="Label" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -44.0
offset_right = 20.0
offset_bottom = 44.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 64
text = "READY?"

[node name="StartButton" type="Button" parent="."]
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -28.0
offset_top = -171.0
offset_right = 28.0
offset_bottom = -140.0
grow_horizontal = 2
grow_vertical = 0
theme_override_font_sizes/font_size = 32
text = "START"

[node name="HBoxContainer" type="HBoxContainer" parent="."]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -67.0
offset_right = 67.0
offset_bottom = 45.0
grow_horizontal = 2

[node name="LeftScore" type="Label" parent="HBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 48
text = "0"

[node name="Timer" type="Label" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 32
text = "Timer"

[node name="RightScore" type="Label" parent="HBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 48
text = "0"

[connection signal="pressed" from="StartButton" to="." method="_on_start_button_pressed"]
